--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,14 +53,11 @@ repositories {
 }
 
 dependencies {
-
-
     compile 'com.tencent.bugly:crashreport:latest.release'
     //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile files('libs/fastjson-1.2.5.jar')
     compile files('libs/MobCommons-2016.1020.1028.jar')
     compile files('libs/lite-orm-1.7.0.jar')
     compile files('libs/SpringingLayout.jar')
@@ -70,9 +67,9 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
     compile 'com.google.guava:guava:20.0'
     compile 'com.bluelinelabs:logansquare-compiler:1.3.7'
-    compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.android.gms:play-services:10.2.1'
     compile files('libs/AMap3DMap_5.0.0_AMapNavi_1.9.4_AMapSearch_5.0.0_AMapLocation_3.3.0_20170311.jar')
+    compile project(path: ':common')
+    compile project(path: ':calendar')
 }
