--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,14 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix '.debug'
+        }
+
     }
     lintOptions {
         checkReleaseBuilds false
@@ -72,4 +77,5 @@ dependencies {
     compile files('libs/AMap3DMap_5.0.0_AMapNavi_1.9.4_AMapSearch_5.0.0_AMapLocation_3.3.0_20170311.jar')
     compile project(path: ':common')
     compile project(path: ':calendar')
+    compile files('libs/pgyer_sdk_2.5.6.jar')
 }
